--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,7 @@ input {
 }
 
 #viewport .stack {
-  width: 100%; height: 100%; background: white; position: absolute; 
+  width: 980px; height: 100%; background: white; position: absolute; 
 }
 
 #viewport li {
