--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,22 @@
-html,
-body,
-ul,
-li {
-  margin: 0; padding: 0;
-  height: 100%;
-}
 
-body {
+@media only screen 
+and (min-device-width : 300px) 
+and (max-device-width : 700px) 
+and (orientation : portrait) { 
+  html,
+  body,
+  ul,
+  li {
+    margin: 0; padding: 0;
+    height: 100%;
+  }
+
+  body {
    font: normal 16px/24px 'Helvetica Neue', Helvetica, Arial, freesans, sans-serif;
-}
-button,
-input,
-code {
+ }
+ button,
+ input,
+ code {
   display: inline-block; outline: none; font: inherit; border: none; background: #FDE991; padding: 0;
 }
 
@@ -32,7 +37,7 @@ input {
 }
 
 #viewport li {
-  width: 90%; height: 90%; list-style: none; background: white; border-radius: 5px; position: fixed; top: 5%; left: 5%; border: 10px solid white; box-sizing: border-box; cursor: default;
+  width: 90%; height: 80%; list-style: none; background: white; border-radius: 5px; position: fixed; top: 5%; left: 5%; border: 10px solid white; box-sizing: border-box; cursor: default;
 }
 
 #control {
@@ -61,15 +66,16 @@ input {
 }
 
 .info{
-  font-size: 30px;
-  height: 30px;
-  margin-top: 20px;
+  font-size: 80px;
+  height: 8%;
+  margin-top: 50px;
   position: absolute;
 }
 .name-age {
   text-align: left;
 }
 .overlay {
+  border: 10px solid black;
   opacity:0;
   filter: alpha(opacity = 0);
   position:absolute;
@@ -80,6 +86,7 @@ input {
   height: 100%;
 }
 .overlay-text {
+  border: 2px solid black;
   color: black;
   position:absolute;
   top:0; bottom:0; left:0; right:0;
@@ -167,13 +174,13 @@ input {
   position: absolute;
   left: 25%;
   height: 10%;
-  width: 10%;
+  width: 13%;
   top: 85%;
 }
 #gamepad-yes {
   color: green;
   height: 10%;
-  width: 10%;
+  width: 13%;
   position: absolute;
   left: 65%;
   top: 85%;
