--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,7 @@ input {
 }
 
 #viewport li {
-  width: 90%; height: 80%; list-style: none; background: white; border-radius: 5px; position: fixed; top: 5%; left: 5%; border: 10px solid white; box-sizing: border-box; cursor: default;
+  width: 90%; height: 60%; list-style: none; background: white; border-radius: 20px; position: fixed; top: 10%; left: 5%; box-sizing: border-box; cursor: default;
 }
 
 #control {
@@ -64,9 +64,10 @@ input {
 }
 
 .info{
-  font-size: 80px;
+  font-size: 40px;
   height: 8%;
-  margin-top: 50px;
+  margin-top: 30px;
+  margin-left: 20px;
   position: absolute;
 }
 
@@ -80,6 +81,7 @@ input {
   z-index:2;
   background:transparent;
   height: 100%;
+  border-radius: 20px;
 }
 .overlay-text {
   border: 2px solid black;
@@ -89,6 +91,7 @@ input {
   display:block;
   z-index:2;
   height: 100%;
+  border-radius: 20px;
 }
 .like {
   -webkit-transform: rotate(-30deg);
@@ -131,6 +134,7 @@ input {
   height: 5%;
   position: absolute;
   right: 5%;
+  top: 2%;
 }
 
 .match-screen {
@@ -141,10 +145,14 @@ input {
 .match-screen-img {
   width: 100%;
 }
+.image {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
 .match-image{
   width: 20%;
   height: 20%;
-  border-radius: 50%;
+  border-radius: 50px;
   margin-left:40%;
   margin-top: 5%;
 }
@@ -152,7 +160,12 @@ input {
   font-size: 50px;
   text-align: center;
 }
-
+.logo {
+  margin-left:40%;
+  height: 5%;
+  position: absolute;
+  top: 2%;
+}
 .exit-match-screen {
   text-align: center;
   font-size: 80px;
@@ -170,7 +183,7 @@ input {
   left: 25%;
   height: 10%;
   width: 13%;
-  top: 85%;
+  top: 75%;
 }
 #gamepad-yes {
   color: green;
@@ -178,5 +191,5 @@ input {
   width: 13%;
   position: absolute;
   left: 65%;
-  top: 85%;
+  top: 75%;
 }
